--- a/conf/slurm_resources.config
+++ b/conf/slurm_resources.config
@@ -11,7 +11,7 @@ process {
             memory = 64.GB
             time = 24.h
             queue = 'gpu'
-            clusterOptions = "--gres=gpu:1"
+            clusterOptions = "--gres=gpu:1 --constraint=pascal"
         } else {
             cpus=40
             memory=180.GB
