Guppy suddenly wont work- reverting

--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,8 @@ params {
   flowcell='FLO-MIN106'
   kit='SQK-LSK109'
   barcode_kit='EXP-NBD104 EXP-NBD114'
+  cpus=1
+  threads=30
   gpu_active=false
   gpus='0'
   outdir = './results'
