--- a/conf/slurm_resources.config
+++ b/conf/slurm_resources.config
@@ -1,4 +1,6 @@
 nodename = params.node_partition
+gpu_nodename=params.gpu_node_partition
+gpu_clusterOptions=params.gpu_clusterOptions
 
 process {
 
@@ -8,10 +10,10 @@ process {
             singularity.runOptions = '--nv'
             
             cpus = 12
-            memory = 96.GB
+            memory = 64.GB
             time = 24.h
-            queue = 'gpu'
-            clusterOptions = "--gres=gpu:1 --constraint=pascal"
+            queue = gpu_nodename
+            clusterOptions = gpu_clusterOptions
         } else {
             cpus=40
             memory=180.GB
