--- a/nextflow.config
+++ b/nextflow.config
@@ -31,12 +31,12 @@ params {
   min_length=1000
   min_mean_q=70
 
-  //Other
+  //Kraken
   kraken_db = "s3://genome-idx/kraken/k2_standard_20201202.tar.gz"
   kraken_tax_level = 'S'
 
   // Rasusa
-  subset_cov=1000
+  subset_cov=100
   genome_size='4.4mb'
   genome_size_bytes=4400000
 
@@ -51,6 +51,7 @@ params {
   max_indel_size = 1000
 
   //Anvio
+  anvio_run=true
   project_name='ProjectName'
   min_occurence='1'
   minbit='0.5'
@@ -62,6 +63,16 @@ params {
 
   //Slurm controller
   node_partition='main'
+  gpu_node_partition='gpu'
+  gpu_clusterOptions="--gres=gpu:1 --constraint=pascal"
+
+  //Skip steps
+  skip_demux = false
+
+  //Solo steps
+  only_demux = false
+  only_assembly = false
+  only_polish=false
 }  
 
 timeline {
