Polish input fix

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,7 +34,7 @@ params {
   max_indel_size = 1000
 
   //Anvio
-  anvio_run=true
+  anvio_run=false
   project_name='ProjectName'
   min_occurence='1'
   minbit='0.5'
