--- a/conf/slurm_resources.config
+++ b/conf/slurm_resources.config
@@ -10,7 +10,7 @@ process {
             singularity.runOptions = '--nv'
             
             cpus = 12
-            memory = 64.GB
+            memory = 96.GB
             time = 24.h
             queue = gpu_nodename
             clusterOptions = gpu_clusterOptions
@@ -45,6 +45,12 @@ process {
         cpus = 38
         memory = 180.GB
         time = 48.h
+        queue = nodename
+    }
+    withLabel:process_overkill_long {
+        cpus = 38
+        memory = 180.GB
+        time = 96.h
         queue = nodename
     }
 }
